--- a/aula.html
+++ b/aula.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> OLÁ PROFESSOR </title>
+        <title> Bem vindo! </title>
         <link rel="stylesheet" href="style.css">
         <style>
             body{
-                font-family: Arial,Helvetica, sans-serif;    
+                font-family: dauphin,Helvetica, sans-serif;    
             }
             p{
                 font-style:italic;
