--- a/aula.html
+++ b/aula.html
@@ -8,7 +8,7 @@
                 font-family: dauphin,Helvetica, sans-serif;    
             }
             p{
-                font-style:italic;
+                font-style:letter gothic;
             }
         </style>
     </head>
