--- a/aula.html
+++ b/aula.html
@@ -13,8 +13,8 @@
         </style>
     </head>
 
-    <body style="background-color:white">
-        <h1 style="background-color:rgb(165, 238, 238)"> Olá professor Francisco </h1>
+    <body style="background-color:#A9A9A9">
+        <h1 Olá professor Francisco </h1>
         <h2> Informática para Internet </h2>
         <h1> Trabalho realizado no github </h1> 
         <p> Primeiro trabalho de Programação Web 1 </p>
