--- a/aula.html
+++ b/aula.html
@@ -15,12 +15,12 @@
 
     <body style="background-color:#A9A9A9">
         <h1 style= "color: #FFFF00"> JavaScripit </h1>
-        <h2> Informática para Internet </h2>
-        <h1> Trabalho realizado no github </h1> 
-        <p> Primeiro trabalho de Programação Web 1 </p>
-        <h2> Não é a linguagem de programação que define o programador, mas sim sua lógica. </h2>  
-        <h1> Primeiro resolva o problema. Depois escreva o código. </h1> 
-        <p> Aproveite enquanto vive como programador no planeta, pois a tecnologia avança de uma forma gradativamente nos transformando em um ser burro. </p> 
+        <h2> JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma.  </h2>
+        <h1> Visual Studio Code </h1> 
+        <p> Visual Studio Code é um editor de código-fonte desenvolvido pela Microsoft para Windows, Linux e macOS.</p>
+        <h2> Dara Mendes Botecchia </h2>  
+        <h1> IFES Campus Serra </h1> 
+        <p> 2022/2 </p> 
 
     </body>
 </html>
