--- a/aula.html
+++ b/aula.html
@@ -14,7 +14,7 @@
     </head>
 
     <body style="background-color:#A9A9A9">
-        <h1 style= "color: #FFFF00","text-align:center">JavaScripit </h1>
+        <h1 style= "color: #FFFF00"> JavaScripit </h1>
         <h2> JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma.  </h2>
         <h1> Visual Studio Code </h1> 
         <p> Visual Studio Code é um editor de código-fonte desenvolvido pela Microsoft para Windows, Linux e macOS.</p>
