--- a/Agro.html
+++ b/Agro.html
@@ -12,7 +12,10 @@
 
     Acompanhe o Agro em todo lugar!!
 
-    <a href="https://www.nike.com.br/"><h2 id="site">Site do Agropecuario</h2></a>
+    <a href="https://pt.wikipedia.org/wiki/Agropecu%C3%A1ria"><h2 id="site">Site sobre Agropecuária</h2></a>
+    <a href="https://instagram.com/agri_view?igshid=YmMyMTA2M2Y="><h2 id="Insta">Instagram sobre Agropecuária</h2></a>
+    <a href="https://www.facebook.com/agropecuariasolomio/"><h2 id="Face">Instagram sobre Agropecuária</h2></a>
+    <a href="https://twitter.com/norteagroto?s=11&t=YohbuclkTLMPYcdO-SyN6w"><h2 id="Tt">Twitter sobre Agropecuária</h2></a>
 
     <h2 id="insta"></h2>
 
