--- a/Agro.html
+++ b/Agro.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agropecuária</title>
+    <style>
+        div {}
+        h2 {}
+        body{
+        backgroud-color: #228B22;
+        }
+    </style>
+    
 </head>
 <body>
 
