--- a/Agro.html
+++ b/Agro.html
@@ -22,7 +22,7 @@
     
      <h2> Sumário </h2>
     <ol>
-      <li><strong> Agronegócios: Conceitos e dimensões,13 </strong></li>
+      <li> AGRONEGÓCIOS: CONCEITOS E DIMENSÕES,13 </li>
       <li> Agricultura e agronegócios,13 </li>
       <li> Conceitos de agronegócio,15 </li>
       <li> Sistemas agroindustriais,18 </li>
