--- a/Agro.html
+++ b/Agro.html
@@ -9,7 +9,7 @@
         div {}
         h2 {}
         body{
-        backgroud-color:ForestGreen;
+        backgroud-color:#228B22;
         }
     </style>
     
