--- a/Agro.html
+++ b/Agro.html
@@ -14,8 +14,6 @@
 </head>
 <body>
 
-    <img src="imagem" alt="">
-
     Acompanhe o Agro em todo lugar!!
     
      <h2> Sumário </h2>
@@ -36,6 +34,10 @@
       <li> Inter-relações de produtores de insumos com agropecuaristas,42 </li>
       <li> Serviços agropecuários,42 </li>
     </ol>
+    
+    <img src="vaquinha.jpg" alt="Vaquinha">
+    <img src="pasto.jpg" alt="Pasto">
+    <img src="coisas.png" alt="Agropecuária">
 
 
     <a href="https://pt.wikipedia.org/wiki/Agropecu%C3%A1ria"><h2 id="site">Site sobre Agropecuária</h2></a>
