--- a/aba2.html
+++ b/aba2.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<script>
 function JTabControl(divMaster,tabWidth,tabHeight)
 {
 	
@@ -81,3 +83,5 @@ function getObj(idObj)
 {
 	return document.getElementById(idObj);
 }
+</script>
+</html>
