--- a/texte3.html
+++ b/texte3.html
@@ -6,6 +6,7 @@
 <!--   <link href="ContatoEstilo.css" rel="stylesheet" media="all" />
     <script src="JavaScript1.js"></script>-->
 <style>body {
+    background color:#CC3300;
     padding: 0;
     margin: 0;
 }
