--- a/Dara.html
+++ b/Dara.html
@@ -15,6 +15,30 @@
 <div class="page-wrapper"> 
   <h4>Dara Mendes Botecchia</h4>
 </div>
+      <a href="https://pt.wikipedia.org/wiki/Agropecu%C3%A1ria"><h2 id="site">Site sobre Agropecuária</h2></a>
+    <a href="https://instagram.com/agri_view?igshid=YmMyMTA2M2Y="><h2 id="Insta">Instagram sobre Agropecuária</h2></a>
+    <a href="https://www.facebook.com/agropecuariasolomio/"><h2 id="Face">Instagram sobre Agropecuária</h2></a>
+    <a href="https://twitter.com/norteagroto?s=11&t=YohbuclkTLMPYcdO-SyN6w"><h2 id="Tt">Twitter sobre Agropecuária</h2></a>
+    
+     <img src="vaquinha.jpg" alt="Vaquinha">
+    <img src="pasto.jpg" alt="Pasto">
+    <img src="coisas.png" alt="Agropecuária">
+
+
+    <h2 id="insta"></h2>
+
+    <h2 id="face"></h2>
+
+    <h2 id="tt"></h2>
+
+    
+
+<script>
+    document.querySelector('h2#site')
+    document.querySelector('h2#insta')
+    document.querySelector('h2#face')
+    document.querySelector('h2#tt')
+</script>
     <style>
 /* Config */
 $color-bg: #1e1e1e;
