--- a/Dara.html
+++ b/Dara.html
@@ -46,8 +46,8 @@ html, body {
 
 body {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
   font-size: 4rem;
   overflow: hidden;
 }
@@ -134,7 +134,6 @@ body {
 }
 
 .page-wrapper {
-  position: absolute;
   text-align: left;
   color: #fff;
   z-index: 2;
