--- a/Dara.html
+++ b/Dara.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> ANIMAÇÃO </title>
+        <title> SUMÁRIO </title>
     </head>
 <body>
   <div class="page-bg"></div>
@@ -15,6 +15,7 @@
 <div class="page-wrapper"> 
   <h4>Dara Mendes Botecchia</h4>
 </div>
+    
     <style>
 /* Config */
 $color-bg: #1e1e1e;
