--- a/Dara.html
+++ b/Dara.html
@@ -15,6 +15,7 @@
 <div class="page-wrapper"> 
   <h4>Dara Mendes Botecchia</h4>
 </div>
+    <br>
     <ol>
         <li><a href="#link" rel="external"> nome que fica</a> </li>
         <li><a href="#link" rel="external"> nome que fica</a> </li>
@@ -22,7 +23,7 @@
         <li><a href="#link" rel="external"> nome que fica</a> </li>
         <li><a href="#link" rel="external"> nome que fica</a> </li>
     </ol>
-    <h2> CORAGEM </h2>
+    <h2> Agropecuária </h2>
     <p> <strong> Coragem é a primeira das qualidades humanas porque garante todas as outras. </strong></p>
     <br>
     <br>
@@ -56,6 +57,7 @@
     <br>
     <br>
     <br>
+    
     <style>
 /* Config */
 $color-bg: #1e1e1e;
