--- a/Agro.html
+++ b/Agro.html
@@ -80,7 +80,7 @@
     <br>
     
     <h2 id = "Importância da agropecuária"> Importância da agropecuária </h2>
-    <p> <strong> Coragem é a primeira das qualidades humanas porque garante todas as outras. </strong></p>
+    <p> <strong> "A produção agropecuária é parte fundamental da economia de um país. Ela é responsável pelo abastecimento do mercado interno com alimentos, como frutas, verduras, legumes, carnes, ovos e leites, e pela remessa desses produtos em direção ao mercado exterior, tornando-se importante também para o suprimento da demanda de outros países e territórios." </strong></p>
     <br>
     <br>
     <br>
