--- a/Agro.html
+++ b/Agro.html
@@ -11,7 +11,8 @@
         padding: 50;
       }
       img{
-        height: 325px;
+        height: 300px;
+        border: 4px color-white;
       }
       .footer{
         background-color: #fff;
