--- a/Agro.html
+++ b/Agro.html
@@ -12,7 +12,7 @@
       }
       img{
         height: 300px;
-        border: 4px color-white;
+        border: solid, color: #DA70D6;
       }
       .footer{
         background-color: #fff;
@@ -43,6 +43,8 @@
 <body>
 
     Acompanhe o Agro em todo lugar!!
+    
+    <div> </div>
     
      <br>
     <ol>
