--- a/Agro.html
+++ b/Agro.html
@@ -115,8 +115,8 @@ Agropecuária intensiva em mão de obra: assemelha-se à modalidade extensiva no
     var ano = dataAtual.getFullYear();
     var horas = dataAtual.getHours();
     var minutos = dataAtual.getMinutes();
-    document.getElementById('Horas') = ("Hoje é dia " + dia + "/" + mes + " de " + ano + ". Agora são " + horas + ":" + minutos + "h.");
-    // saída: Hoje é dia 15/7 de 2020. Agora são 14:59h.
+    document.getElementById('Horas').src = ("Hoje é dia " + dia + "/" + mes + " de " + ano + ". Agora são " + horas + ":" + minutos + "h.");
+   
 </script>
 
 </body>
