--- a/Agro.html
+++ b/Agro.html
@@ -117,7 +117,7 @@ Agropecuária intensiva em mão de obra: assemelha-se à modalidade extensiva no
     var minutos = dataAtual.getMinutes()
     var div = document.getElementById('Horas')
     
-     div.innerHTML = `"Hoje é dia " + dia + "/" + mes + " de " + ano + ". Agora são " + horas + ":" + minutos + "h."`
+     div.innerHTML = `Hoje é dia ${dia} / ${mes} / ${ano}. Agora são ${horas} : ${minutos}`
    
 </script>
 
