--- a/Texte.html
+++ b/Texte.html
@@ -3,7 +3,7 @@
     <title> TEXTEEEE </title>
   </head>
    <body>
-    <div class="wrap">
+ <div class="wrap">
 <svg width="28.2" height="31" viewBox="0 0 28.2 31">
 <path id="st0" fill="none" stroke-width="0.2" stroke="#3D8CD0" d="M27.7,13.1v13.6c-0.7,0.5-1.4,1-2.3,1.4c-0.9,0.5-1.8,0.9-2.9,1.2s-2.2,0.6-3.4,0.9c-1.2,0.2-2.5,0.3-3.9,0.3
 	c-2.5,0-4.6-0.3-6.5-1c-1.8-0.7-3.4-1.7-4.6-3c-1.2-1.3-2.1-2.9-2.7-4.7c-0.6-1.8-0.9-3.9-0.9-6.1c0-2.3,0.3-4.5,0.9-6.3
@@ -11,9 +11,10 @@
 	c0.6,1.2,1,2.4,1.2,3.7l-9.1,0.8c-0.2-1-0.6-1.8-1.2-2.2c-0.6-0.4-1.4-0.6-2.4-0.6c-1.7,0-3,0.6-3.8,1.7c-0.8,1.1-1.2,3-1.2,5.6
 	c0,2.7,0.4,4.6,1.3,5.8c0.9,1.2,2.4,1.8,4.5,1.8c1.4,0,2.6-0.2,3.6-0.6V20h-3.8v-6.9H27.7z"/>
 </svg>
-	   </div>
+</div>
 	   <style>
-		   body {
+		html,
+body {
 	height: 100%;
   	background-color: #222;
 	overflow: hidden;
@@ -40,8 +41,7 @@ svg{
   overflow: visible;
 }
            </style>
-	   <script>
-		   var doc = document,
+	   var doc = document,
 	body = doc.body,
 	a = TweenMax;
 
@@ -118,6 +118,8 @@ function removeElements(){
 	});
    
 }
+	   <script>
+	
 	   </script>
     </body>
     </html>
