--- a/foco.html
+++ b/foco.html
@@ -25,19 +25,15 @@
 		</div>
 		
 	</div>
-	<p class="blur">FOCUS</p>
-	<p class="focus">FOCUS</p>
+	<p class="blur">Fellipy Wagmacker</p>
+	<p class="focus">Fellipy Wagmacker</p>
 </div>
 
 
 
 
 
-<div id="made-by-cameron">
-	<code>
-		<span class="made-by-twitter">🐦 Follow me on <a href="https://twitter.com/cameronjfitz" target="_BLANK">Twitter!</a></span>
-		<span class="made-by-author">Made by <a href="https://cameronfitzwilliam.com" target="_BLANK">Cameron Fitzwilliam</a></span>
-	</code>
+<div id="made-by-cameron"
 </div>
     </body>
     <style>
@@ -270,7 +266,7 @@ body {
 	function touchMove(){
 		// Initial container width
 		var containerWidth = $('.container').outerWidth();
-		document.addEventListener('touchmove', function(e) {
+		document.addEventListener('mousemove', function(e) {
 			$('.hover').css({
 				 left:  e.pageX
 			});
