--- a/foco.html
+++ b/foco.html
@@ -1,43 +1,28 @@
-<html>
-  <head>
-    <body>
-      <div id="focus-container" class="container">
-	<div class="left-side"></div>
-	<div class="right-side"></div>
-	<div class="hover">
-		<div class="tri-1">
-			<div class="bit-top"></div>
-			<div class="bit-top-left"></div>
-		</div>
-		<div class="tri-2">
-			<div class="bit-top-right"></div>
-			<div class="bit-top-right-2"></div>
-		</div>
-		
-		<div class="tri-3">
-			<div class="bit-bottom-left"></div>
-			<div class="bit-bottom-left-2"></div>
-		</div>
-		
-		<div class="tri-4">
-			<div class="bit-bottom-right"></div>
-			<div class="bit-bottom-right-2"></div>
-		</div>
-		
-	</div>
-	<p class="blur">Fellipy Wagmacker</p>
-	<p class="focus">Fellipy Wagmacker</p>
-</div>
 
 
+<!DOCTYPE html>
+<html lang="en" >
+
+<head>
+
+  <meta charset="UTF-8">
+  
+<link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" />
+<meta name="apple-mobile-web-app-title" content="CodePen">
+
+<link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico" />
+
+<link rel="mask-icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
 
 
+  <title>CodePen - Focus Text Hover Effect | HTML+   CSS + jQuery</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-<div id="made-by-cameron"
-</div>
-    </body>
-    <style>
-      @import url('https://fonts.googleapis.com/css?family=Overpass');
+  
+  
+  
+<style>
+@import url('https://fonts.googleapis.com/css?family=Overpass');
 
 .left-side {
     position: absolute;
@@ -212,100 +197,164 @@ body {
 	left: 2%;
 	top: 23%;
 }
-      </style>
-    <script>
-     (function(){
-	var addEvent = function(object, type, callback) {
-	    if (object == null || typeof(object) == 'undefined') return;
-	    if (object.addEventListener) {
-	        object.addEventListener(type, callback, false);
-	    } else if (object.attachEvent) {
-	        object.attachEvent("on" + type, callback);
-	    } else {
-	        object["on"+type] = callback;
-	    }
-	};
-	function detectMouseMove() {
-		// Initial container width
-		var containerWidth = $('.container').outerWidth();
-		document.addEventListener('mousemove', function(e) {
-			$('.hover').css({
-				 left:  e.pageX
-			});
-			$('.left-side').css({
-				left: e.pageX + 75
-			});
-			var rightSideLeft = containerWidth - e.pageX;
-			$('.right-side').css({
-				right: rightSideLeft
-			});
+</style>
 
-		})
-	}
-	detectMouseMove();
-	
-	
-	function detectTouch() {
-		// Initial container width
-		var containerWidth = $('.container').outerWidth();
-		document.addEventListener('mousemove', function(e) {
-			$('.hover').css({
-				 left:  e.pageX
-			});
-			$('.left-side').css({
-				left: e.pageX + 75
-			});
-			var rightSideLeft = containerWidth - e.pageX;
-			$('.right-side').css({
-				right: rightSideLeft
-			});
-		})
-	}
-	detectMouseMove();
-	
-	function touchMove(){
-		// Initial container width
-		var containerWidth = $('.container').outerWidth();
-		document.addEventListener('touchmove', function(e) {
-			$('.hover').css({
-				 left:  e.pageX
-			});
-			$('.left-side').css({
-				left: e.pageX + 75
-			});
-			var rightSideLeft = containerWidth - e.pageX;
-			$('.right-side').css({
-				right: rightSideLeft
-			});
+  <script>
+  window.console = window.console || function(t) {};
+</script>
 
-		})
-	}
-	
-	touchMove();
-	
-	function detectInput(inputType){
-		// Detect container width after resizing
-		addEvent(window, "resize", function(event) {
-			var containerWidth = $('.container').outerWidth();
-			$(document).bind(inputType, function(e){
-				$('.hover').css({
-					 left:  e.pageX
-				});
-				$('.left-side').css({
-					left: e.pageX + 75
-				});
-				var rightSideLeft = containerWidth - e.pageX;
-				$('.right-side').css({
-					right: rightSideLeft
-				});
-			});
-		});
-	}
-	
-	detectInput('mousemove');
-	detectInput('touchmove');
-	
+  
+  
+  <script>
+  if (document.location.search.match(/type=embed/gi)) {
+    window.parent.postMessage("resize", "*");
+  }
+</script>
+
+
+</head>
+
+<body translate="no" >
+  <div id="focus-container" class="container">
+	<div class="left-side"></div>
+	<div class="right-side"></div>
+	<div class="hover">
+		<div class="tri-1">
+			<div class="bit-top"></div>
+			<div class="bit-top-left"></div>
+		</div>
+		<div class="tri-2">
+			<div class="bit-top-right"></div>
+			<div class="bit-top-right-2"></div>
+		</div>
+		
+		<div class="tri-3">
+			<div class="bit-bottom-left"></div>
+			<div class="bit-bottom-left-2"></div>
+		</div>
+		
+		<div class="tri-4">
+			<div class="bit-bottom-right"></div>
+			<div class="bit-bottom-right-2"></div>
+		</div>
+		
+	</div>
+	<p class="blur">FOCUS</p>
+	<p class="focus">FOCUS</p>
+</div>
+
+
+
+
+
+<div id="made-by-cameron">
+	<code>
+		<span class="made-by-twitter">🐦 Follow me on <a href="https://twitter.com/cameronjfitz" target="_BLANK">Twitter!</a></span>
+		<span class="made-by-author">Made by <a href="https://cameronfitzwilliam.com" target="_BLANK">Cameron Fitzwilliam</a></span>
+	</code>
+</div>
+    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
+
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+      <script id="rendered-js" >
+(function () {
+  var addEvent = function (object, type, callback) {
+    if (object == null || typeof object == 'undefined') return;
+    if (object.addEventListener) {
+      object.addEventListener(type, callback, false);
+    } else if (object.attachEvent) {
+      object.attachEvent("on" + type, callback);
+    } else {
+      object["on" + type] = callback;
+    }
+  };
+  function detectMouseMove() {
+    // Initial container width
+    var containerWidth = $('.container').outerWidth();
+    document.addEventListener('mousemove', function (e) {
+      $('.hover').css({
+        left: e.pageX });
+
+      $('.left-side').css({
+        left: e.pageX + 75 });
+
+      var rightSideLeft = containerWidth - e.pageX;
+      $('.right-side').css({
+        right: rightSideLeft });
+
+
+    });
+  }
+  detectMouseMove();
+
+
+  function detectTouch() {
+    // Initial container width
+    var containerWidth = $('.container').outerWidth();
+    document.addEventListener('mousemove', function (e) {
+      $('.hover').css({
+        left: e.pageX });
+
+      $('.left-side').css({
+        left: e.pageX + 75 });
+
+      var rightSideLeft = containerWidth - e.pageX;
+      $('.right-side').css({
+        right: rightSideLeft });
+
+    });
+  }
+  detectMouseMove();
+
+  function touchMove() {
+    // Initial container width
+    var containerWidth = $('.container').outerWidth();
+    document.addEventListener('touchmove', function (e) {
+      $('.hover').css({
+        left: e.pageX });
+
+      $('.left-side').css({
+        left: e.pageX + 75 });
+
+      var rightSideLeft = containerWidth - e.pageX;
+      $('.right-side').css({
+        right: rightSideLeft });
+
+
+    });
+  }
+
+  touchMove();
+
+  function detectInput(inputType) {
+    // Detect container width after resizing
+    addEvent(window, "resize", function (event) {
+      var containerWidth = $('.container').outerWidth();
+      $(document).bind(inputType, function (e) {
+        $('.hover').css({
+          left: e.pageX });
+
+        $('.left-side').css({
+          left: e.pageX + 75 });
+
+        var rightSideLeft = containerWidth - e.pageX;
+        $('.right-side').css({
+          right: rightSideLeft });
+
+      });
+    });
+  }
+
+  detectInput('mousemove');
+  detectInput('touchmove');
+
 })();
+//# sourceURL=pen.js
     </script>
-  </head>
+
+  
+
+</body>
+
 </html>
+ 
