--- a/foco.html
+++ b/foco.html
@@ -239,20 +239,15 @@ body {
 		</div>
 		
 	</div>
-	<p class="blur">FOCUS</p>
-	<p class="focus">FOCUS</p>
+	<p class="blur">Fellipy Wagmacker</p>
+	<p class="focus">Fellipy Wagmacker</p>
 </div>
 
 
 
 
 
-<div id="made-by-cameron">
-	<code>
-		<span class="made-by-twitter">🐦 Follow me on <a href="https://twitter.com/cameronjfitz" target="_BLANK">Twitter!</a></span>
-		<span class="made-by-author">Made by <a href="https://cameronfitzwilliam.com" target="_BLANK">Cameron Fitzwilliam</a></span>
-	</code>
-</div>
+
     <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
