--- a/foco.html
+++ b/foco.html
@@ -240,7 +240,7 @@ body {
 		
 	</div>
 	<p class="blur">Fellipy Wagmacker</p>
-	<p class="focus">Fellipy Wagmacker</p>
+	<p class="focus">Gay</p>
 </div>
 
 
