--- a/foco.html
+++ b/foco.html
@@ -239,8 +239,8 @@ body {
 		</div>
 		
 	</div>
-	<p class="blur">Fellipy Wagmacker</p>
-	<p class="focus">Gay</p>
+	<p class="blur">Acompanhe o Agro em todo lugar e a qualquer hora!!</p>
+	<p class="focus">Acompanhe o Agro em todo lugar e a qualquer hora!!</p>
 </div>
 
 
