--- a/foco.html
+++ b/foco.html
@@ -15,7 +15,7 @@
 <link rel="mask-icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
 
 
-  <title> Texte </title>
+  <title>CodePen - Focus Text Hover Effect | HTML+   CSS + jQuery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
   
@@ -154,12 +154,20 @@
 
 .container {
 	position: absolute;
-	height: 160vh;
+	height: 80vh;
 	padding-top: 20vh;
 	width: 100%;
 	overflow: hidden;
 }
-	
+
+
+body {
+	background: #000;
+	margin: 0;
+	padding: 0;
+	cursor: none;
+}
+
 
 
 /* Made by */
@@ -231,15 +239,20 @@ body {
 		</div>
 		
 	</div>
-	<p class="blur">Acompanhe o Agro em todo lugar e a qualquer hora!!</p>
-	<p class="focus">Acompanhe o Agro em todo lugar e a qualquer hora!!</p>
+	<p class="blur">FOCUS</p>
+	<p class="focus">FOCUS</p>
 </div>
 
 
 
 
 
-
+<div id="made-by-cameron">
+	<code>
+		<span class="made-by-twitter">🐦 Follow me on <a href="https://twitter.com/cameronjfitz" target="_BLANK">Twitter!</a></span>
+		<span class="made-by-author">Made by <a href="https://cameronfitzwilliam.com" target="_BLANK">Cameron Fitzwilliam</a></span>
+	</code>
+</div>
     <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
