--- a/Agro.html
+++ b/Agro.html
@@ -94,9 +94,9 @@
     <h2>Tipos de agropecuária</h2>
     <p>
         <strong>
-            "Agropecuária extensiva: trata-se da agricultura e da pecuária tradicionais. Nesse sistema produtivo, é muito baixo ou inexistente o emprego das técnicas mais modernas de produção. As lavouras são desenvolvidas em áreas extensas, devido à baixa produtividade do solo, e com a adoção de mão de obra geralmente de origem familiar. Os animais são criados soltos e em pastos amplos, substrato do qual se alimentam.
+            Agropecuária extensiva: trata-se da agricultura e da pecuária tradicionais. Nesse sistema produtivo, é muito baixo ou inexistente o emprego das técnicas mais modernas de produção. As lavouras são desenvolvidas em áreas extensas, devido à baixa produtividade do solo, e com a adoção de mão de obra geralmente de origem familiar. Os animais são criados soltos e em pastos amplos, substrato do qual se alimentam.
             Agropecuária intensiva: trata-se da agricultura e da pecuária modernas, intensivas tanto em capitais quanto em tecnologia. Outro ponto importante é o de que ambas as atividades apresentam elevados índices de produtividade, além de empregarem mão de obra em menor quantidade, mas com maior qualificação.
-            Agropecuária intensiva em mão de obra: assemelha-se à modalidade extensiva no que diz respeito aos baixos índices de investimento e emprego de tecnologia. Em contrapartida, esse modelo concentra um grande contingente de trabalhadores."
+            Agropecuária intensiva em mão de obra: assemelha-se à modalidade extensiva no que diz respeito aos baixos índices de investimento e emprego de tecnologia. Em contrapartida, esse modelo concentra um grande contingente de trabalhadores.
         </strong>
     </p>
     <br>
@@ -107,7 +107,7 @@
     <h2>Importância da agropecuária</h2>
     <p>
         <strong>
-            "A produção agropecuária é parte fundamental da economia de um país. Ela é responsável pelo abastecimento do mercado interno com alimentos, como frutas, verduras, legumes, carnes, ovos e leites, e pela remessa desses produtos em direção ao mercado exterior, tornando-se importante também para o suprimento da demanda de outros países e territórios."
+            A produção agropecuária é parte fundamental da economia de um país. Ela é responsável pelo abastecimento do mercado interno com alimentos, como frutas, verduras, legumes, carnes, ovos e leites, e pela remessa desses produtos em direção ao mercado exterior, tornando-se importante também para o suprimento da demanda de outros países e territórios.
         </strong>
     </p>
     <br>
