--- a/foco.html
+++ b/foco.html
@@ -239,8 +239,8 @@ body {
 		</div>
 		
 	</div>
-	<p class="blur">FOCUS</p>
-	<p class="focus">FOCUS</p>
+	<p class="blur">DARA MENDES BOTECCHIA</p>
+	<p class="focus">DARA MENDES BOTECCHIA</p>
 </div>
 
 
