--- a/Dara.html
+++ b/Dara.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Agropecuária </title>
+        <title> Dara Mendes Botecchia </title>
     </head>
 <body>
   <div class="page-bg"></div>
@@ -13,7 +13,7 @@
 </div>
 
 <div class="page-wrapper"> 
-  <h4>Dara Mendes Botecchia</h4>
+  <h4>Jogo de Damas</h4>
 </div>
     <style>
 /* Config */
