--- a/Dara.html
+++ b/Dara.html
@@ -46,8 +46,8 @@ html, body {
 
 body {
   display: flex;
-  justify-content: left;
-  align-items: left;
+  justify-content: center;
+  align-items: center;
   font-size: 4rem;
   overflow: hidden;
 }
