--- a/Dara.html
+++ b/Dara.html
@@ -50,6 +50,7 @@ body {
   align-items: center;
   font-size: 4rem;
   overflow: hidden;
+  
 }
 
 .page-bg, .animation-wrapper {
@@ -227,6 +228,9 @@ h4:hover {
       0 0 50px #FF1177,
       0 0 75px #FF1177;
   }
+    a {
+        color: white;
+    }
 }
 
 View Compiled
