--- a/Dara.html
+++ b/Dara.html
@@ -67,7 +67,7 @@ body {
 }
 
 .page-bg {
-  background: $color-bg;
+  background: $color-black;
   background-blend-mode: screen;
   background-size: cover;
   filter: grayscale(100%);
