--- a/Dara.html
+++ b/Dara.html
@@ -54,7 +54,7 @@ body {
   align-items: center;
   font-size: 4rem;
   overflow: hidden;
-  background: color-black;
+  background: color: black;
   
 }
 
@@ -67,7 +67,7 @@ body {
 }
 
 .page-bg {
-  background: $color-black;
+  background: $color-bg;
   background-blend-mode: screen;
   background-size: cover;
   filter: grayscale(100%);
