--- a/Dara.html
+++ b/Dara.html
@@ -54,7 +54,7 @@ body {
   align-items: center;
   font-size: 4rem;
   overflow: hidden;
-  background: color: black;
+  background-color: black;
   
 }
 
