--- a/Dara.html
+++ b/Dara.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="page-wrapper"> 
-  <h4><a href="jgdama.html"> Jogo de Damas</h4>
+  <h4><a href="jgdama.html"> Clique aqui para acessar a página do Jogo de Damas</h4>
 </div>
     <style>
         a {
