--- a/jgdama.html
+++ b/jgdama.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Jogo de damas </title>
 </head>
-<body onload="orga()">
+<body>
     <script src="jogodedamas.js"></script>
 </body>
 </html>
