--- a/Dara.html
+++ b/Dara.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="page-wrapper"> 
-  <h4><a href="jgdama.html">⛁Jogo de Damas⛃</h4>
+  <h4><a href=" https://daramendesbotecchia.github.io/Damas/">⛁Jogo de Damas⛃</h4>
 </div>
     <style>
         a {
