--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Mudando tamanho do título </title>
+    <title> Alterando tamanho do título </title>
     <script src = "tam.js">
         
     </script>
@@ -15,7 +15,7 @@
     <h1>
         <button onclick="aumPalvra()"> &nbsp;+&nbsp; </button>
         <button onclick="dimPalavra()"> &nbsp;-&nbsp; </button>
-        Ifes 2021
+        Dara Mendes Botecchia
     </h1>
 </body>
 
