--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
         
     </script>
 </head>
+    <style>
+       body{
+           background-color:#9400D3;
+           font-color:#00FF00;
+        }
+    </style>
 
 <body>
     <h1>
