--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <style>
            body{
            background-color:#9400D3;
-           font-color:#00FF00;   
+           text=color:#00FF00;   
         }
         .h1{
-            font-color: #00FF00;
+            text=color: #00FF00;
         }
     </style>
 </head>
