--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 
-<body>
+<body  text=color: #00FF00;>
     <h1>
         <button onclick="aumPalvra()"> &nbsp;+&nbsp; </button>
         <button onclick="dimPalavra()"> &nbsp;-&nbsp; </button>
