--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <style>
            body{
            background-color:#9400D3;
-           text=color:#00FF00;   
+           text=color:(0,255,0);   
         }
         .h1{
-            text=color: #00FF00;
+            text=color: (0,255,0);
         }
     </style>
 </head>
 
-<body  text=color: #00FF00;>
+<body  text=color: (0,255,0);>
     <h1>
         <button onclick="aumPalvra()"> &nbsp;+&nbsp; </button>
         <button onclick="dimPalavra()"> &nbsp;-&nbsp; </button>
