--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <style>
            body{
            background-color:#9400D3;
-           text=color:(0,255,0);   
+           text=color:Lime;   
         }
         .h1{
-            text=color: (0,255,0);
+            text=color: Lime;
         }
     </style>
 </head>
 
-<body  text=color: (0,255,0);>
+<body  text=color:Lime;>
     <h1>
         <button onclick="aumPalvra()"> &nbsp;+&nbsp; </button>
         <button onclick="dimPalavra()"> &nbsp;-&nbsp; </button>
