--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <style>
            body{
            background-color:#9400D3;
-           text=color:Lime;   
+           text-color:Lime;   
         }
         .h1{
-            text=color: Lime;
+            text-color: Lime;
         }
     </style>
 </head>
