--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     </script>
     <style>
            body{
-           background-color:#9400D3;
-           text-color:Lime;   
+           background-color:#008080;
+           text-color:Black;   
         }
         .h1{
-            text-color: Lime;
+            text-color:Black;
         }
     </style>
 </head>
 
-<body  text=color:Lime;>
+<body  text=color:Black;>
     <h1>
         <button onclick="aumPalvra()"> &nbsp;+&nbsp; </button>
         <button onclick="dimPalavra()"> &nbsp;-&nbsp; </button>
