--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 
-<body  text=color:Black;>
+<body>
     <h1>
         <button onclick="aumPalvra()"> &nbsp;+&nbsp; </button>
         <button onclick="dimPalavra()"> &nbsp;-&nbsp; </button>
