--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
     <style>
            body{
-           background-color:#008080;
+           background-color:#FFB6C1;
            text-color:Black;   
         }
     </style>
