--- a/ddd.html
+++ b/ddd.html
@@ -15,18 +15,18 @@
 		<style>
 			/* animação para webkit */
 @-webkit-keyframes fundocor {
-    0%   {background: orange;}
-    25%  {background: red;}
-    50%  {background: green;}
-    100% {background: blue;}
+    0%   {background: #D8BFD8;}
+    25%  {background: #FFE4E1;}
+    50%  {background: #FF69B4;}
+    100% {background: #BA55D3;}
 }
 
 /* animação padrão */
 @keyframes fundocor {
-    0%   {background: orange;}
-    25%  {background: red;}
-    50%  {background: green;}
-    100% {background: blue;}
+    0%   {background: #D8BFD8;}
+    25%  {background: #FFE4E1;}
+    50%  {background: #FF69B4;}
+    100% {background: #BA55D3;}
 }
 
 /* executa a chamada da animação no body */
