--- a/texto.html
+++ b/texto.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body onload="withDB(carregaTarefas)">
-    <h1>Lista de tarefas</h1>
+    <h1>Alterando texto</h1>
 
     <button id="mostraEscondeConcluidos">mostra todas</button>
 
