--- a/texto.html
+++ b/texto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de tarefas</title>
+    <title>Alterando texto</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style id="estiloOculto">
         .oculto {
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body onload="withDB(carregaTarefas)">
-    <h1>Alterando texto</h1>
+    <h1>Lista de terefas</h1>
 
     <button id="mostraEscondeConcluidos">mostra todas</button>
 
