--- a/texto.html
+++ b/texto.html
@@ -10,6 +10,9 @@
         .oculto {
             display: none;
         }
+        body{
+            backgroud-color: #836FFF;
+        }
     </style>
 </head>
 <body onload="withDB(carregaTarefas)">
