--- a/texto.html
+++ b/texto.html
@@ -10,9 +10,9 @@
         .oculto {
             display: none;
         }
-        
         body{
-            backgroud-color:#836FFF;
+           background-color:#836FFF;
+           text-color:Black;   
         }
     </style>
 </head>
