--- a/texto.html
+++ b/texto.html
@@ -19,7 +19,7 @@
 <body onload="withDB(carregaTarefas)">
     <h1>Lista de terefas</h1>
 
-    <button id="mostraEscondeConcluidos">mostra todas</button>
+    <button id="mostraEscondeConcluidos">Mostrar todas</button>
 
     <form action="">
         <input type="text" name="novatarefa" placeholder="Nova tarefa">
